@@ -338,7 +338,7 @@ otherwise properties of an element will be replaced with NEWPROPS."
   "Move backward COUNT times in the history structure and return a cons
 of a new history element and new position pointers of the history.
 The position pointers of `w3m-history' will not change.  If COUNT is
-omitted, it defaults to number one.  If COUNT is negative, moving
+omitted, it defaults to the number one.  If COUNT is negative, moving
 forward is performed.  Return nil if there is no previous element."
   (when w3m-history
     (let ((oposition (copy-sequence (car w3m-history)))
@@ -354,7 +354,9 @@ forward is performed.  Return nil if there is no previous element."
 	     (while (and (< count 0)
 			 (setq position (caddar w3m-history)))
 	       (w3m-history-set-current (setq last position))
-	       (incf count))))
+	       (incf count)))
+	    (t ;; Don't move.
+	     (setq last (cadar w3m-history))))
       (prog1
 	  (when last
 	    (cons (w3m-history-element (cadar w3m-history))
@@ -365,7 +367,7 @@ forward is performed.  Return nil if there is no previous element."
   "Move forward COUNT times in the history structure and return a cons of
 a new history element and new position pointers of the history.  The
 position pointers of `w3m-history' will not change.  If COUNT is
-omitted, it defaults to number one.  If COUNT is negative, moving
+omitted, it defaults to the number one.  If COUNT is negative, moving
 backward is performed.  If there is no room in the history, move as
 far as possible."
   (w3m-history-backward (- (or count 1))))
